# open-torrent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: README.md  pubspec.yaml
app/android/: build.gradle.kts  gradle.properties
app/android/app/: build.gradle.kts  proguard-rules.pro
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/jniLibs/: .gitignore
app/android/app/src/main/kotlin/org/opentorrent/open_torrent/: DownloadService.kt  MainActivity.kt
app/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/lib/: main.dart
app/lib/engine/: mock_engine.dart  models.dart  opentorrent_bindings.dart  torrent_controller.dart
app/lib/platform/: android_service.dart  desktop_deep_links.dart
app/lib/ui/: home_page.dart  rss_page.dart  settings_page.dart  torrent_detail_page.dart
app/lib/util/: file_logger.dart  format.dart  hardened_http.dart  magnet_validator.dart  secure_credentials.dart  ssrf_guard.dart  update_checker.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugins.cmake
app/linux/native/: .gitignore
app/linux/runner/: my_application.cc
app/test/: desktop_deep_links_test.dart  e2e_flow_test.dart  edge_cases_test.dart  engine_test.dart  magnet_validator_test.dart  reliability_test.dart  security_test.dart  widget_test.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/native/: .gitignore
app/windows/runner/: Runner.rc  main.cpp
core/: BUILD.md  CMakeLists.txt  THIRD_PARTY.md  vcpkg.json
core/include/: opentorrent.h
core/src/: c_api.cpp  session.cpp  session.hpp  utils.cpp  utils.hpp
core/tests/: test_session.cpp
docs/: ARCHITECTURE.md  README.md
packaging/: README.md
packaging/fdroid/: org.opentorrent.open_torrent.yml
packaging/linux/: opentorrent-mime.xml  opentorrent.desktop  postrm
packaging/windows/: opentorrent.iss
packaging/winget/: OpenTorrent.OpenTorrent.yaml
scripts/: build_libtorrent_android.ps1  build_libtorrent_android.sh  build_libtorrent_linux.sh  build_libtorrent_windows.ps1  build_libtorrent_windows.sh  bundle_native_android.ps1  bundle_native_android.sh  bundle_native_linux.sh  bundle_native_windows.ps1  e2e_verify_android_live.ps1  e2e_verify_linux.sh  e2e_verify_windows_live.ps1  package_release_android_live.ps1  package_release_android_live.sh  package_release_linux.sh  package_release_windows_live.ps1
